workshop04/wpapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: wpapp-deploy
   labels:
      app: wordpress

spec:
   replicas: 2
   selector:
      matchLabels:
         app: wpapp-pod
   strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 1
         maxUnavailable: 1
   template:
      metadata:
         name: wpapp-pod 
         labels:
            app: wpapp-pod
      spec:
         containers:
         - name: wpapp-container
           image: wordpress:php7.4-fpm-alpine #???
           imagePullPolicy: IfNotPresent
           resources: 
              requests:
                 cpu: 100m

           ports:
           - name: wpapp-port
             containerPort: 3000
           livenessProbe:
              initialDelaySeconds: 5
              periodSeconds: 30
              timeoutSeconds: 5
              failureThreshold: 3
              httpGet:
                 path: /health
                 port: wpapp-port
---
apiVersion: v1
kind: Service
metadata:
   name: wpapp-svc
   labels:
      app: wordpress

spec:
   type: ClusterIP
   selector:
      app: wpapp-pod
   ports:
   - name: app-port
     port: 8080
     targetPort: wpapp-port
