workshop04/wpdb_.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: wpdb-deploy
   labels:
      app: wordpress

spec:
   replicas: 1
   selector:
      matchLabels:
         app: wordpress-pod
   template: # pod template
      metadata:
         name: wpdb-pod 
         labels:
            app: wordpress-pod
      spec:
         volumes:
         - name: mysql-vol
           persistentVolumeClaim:
              claimName: wpdb-pvc

         containers:
         - name: wordpress-container
           image: wordpress:php7.4-fpm-alpine #???
           imagePullPolicy: IfNotPresent
           ports:
           - name: mysql-port
             containerPort: 3306

           volumeMounts:
           - name: mysql-vol
             mountPath: /var/lib/mysql

           livenessProbe:
              initialDelaySeconds: 15
              periodSeconds: 30
              timeoutSeconds: 5
              failureThreshold: 3
              exec:
                 command:
                 - bash
                 - -c
                 - "mysqladmin ping -uroot -p${MYSQL_ROOT_PASSWORD} || exit 1"

---
apiVersion: v1
kind: Service
metadata:
   name: wpdb-svc
   labels:
      app: wordpress

spec:
   type: ClusterIP
   selector:
      # pod label
      app: wordpress-pod
   ports:
   - name: db-port
     port: 3306
     targetPort: mysql-port
