workshop04/wp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: wp-deploy 
   labels:
      app: wordpress
spec:
   replicas: 1
   selector:
      matchLabels:
         app: wp-pod
   template:
      metadata:
         name: wp-pod 
         labels:
            app: wp-pod
      spec:
         volumes:
         - name: wp-vol
           persistentVolumeClaim:
              claimName: wp-pvc

         containers:
         - name: wordpress
           image: wordpress
           imagePullPolicy: IfNotPresent
           ports:
           - name: wp-port
             containerPort: 80
           volumeMounts:
           - name: wp-vol
             mountPath: /var/www/html  
---
apiVersion: v1
kind: Service
metadata:
   name: wp-svc
   labels:
      app: wordpress
spec: 
   type: ClusterIP
   selector:
      app: wp-pod 
   ports:
   - name: http-port
     port: 80
     targetPort: wp-port
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: wordpress-ing
   namespace: wordpress
   labels:
      app: wordpress
   annotations:
      # nginx.ingress.kubernetes.io/affinity: "cookie"
      # nginx.ingress.kubernetes.io/affinity-mode: "persistent"
      # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
      kubernetes.io/ingress.class: "nginx"

spec:
   rules:
   - host: "wordpress.157.230.193.61.nip.io"
     http:
        paths:
        - path: /
          backend:
             serviceName: wordpress-svc
             servicePort: wp-svc-port
